# Portfolio

./: Debug Simulation.mkv  README.md  Release Simulation.mkv
ProjectFile/: Test.sln
ProjectFile/Test/: Ball.cpp  Ball.hpp  CMakeLists.txt  Context.hpp  CustomClock.cpp  CustomClock.hpp  Entity.cpp  Entity.hpp  Field.cpp  Field.hpp  GameManager.cpp  GameManager.hpp  Player.cpp  Player.hpp  Score.cpp  Score.hpp  Test.vcxproj  Test.vcxproj.filters  Utils.cpp  Utils.hpp  main.cpp
ProjectFile/Test/StateMachine/: Action.hpp  Behaviour.cpp  Behaviour.hpp  Condition.hpp  Transition.cpp  Transition.hpp
piseo_etuve/: .env.example  .gitignore  API.bat  API.sh  IHM.bat  README.md  codeTest.py  requirements.txt
piseo_etuve/Maxime/Trames_Piseo/: AppelClasse.py  CEtuve.py  Final_modbus_server.py
piseo_etuve/Partie_lucas/IHM/: IHM.py  test.py
piseo_etuve/leandre/: configLecter.py  launchApi.py
piseo_etuve/leandre/apiEtuve/: db.sqlite3  manage.py
piseo_etuve/leandre/apiEtuve/apiEtuve/: asgi.py  settings.py  urls.py  wsgi.py
piseo_etuve/leandre/apiEtuve/pages/: apps.py  test.py  views.py
piseo_etuve/leandre/apiEtuve/templates/: index.html  result.html
piseo_etuve/leandre/classe/: Analysis.py  Calculatrice.py  Experimentation.py  Queue.py  Step.py  data.json  history.json  test.json  test.py
